--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button id="leaf-year-btn">Leaf Year Check</button>
             <button id="divided-btn">Divided Number 3&5</button>
             <button id="biggest-btn">Biggest Friend</button>
+            <button id="unique-btn">Unique & Largest Number</button>
         </div> 
     </div>
     <div id="output">
