--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="main-container">
-        <input id="input" type="text" placeholder="Type Your Number">
+        <div class="number-input">
+            <input id="input" type="text" placeholder="Type Your Number">
+            <button id="reset">Reset</button>
+        </div>
         <div>
             <button id="grade-btn">Grade Check</button>  
             <button id="evenOdd-btn">Even/ODD Check</button>  
